--- a/admin/hotels/Hotels prvious all input update.html
+++ b/admin/hotels/Hotels prvious all input update.html
@@ -213,9 +213,9 @@
                                                 <div class="col-lg-5"><label class="labels"><b>Number of
                                                             Rooms</b></label><input type="number" class="form-control"
                                                         id="numRooms" placeholder="Number of Rooms" required></div>
-                                                <div class="col-lg-5"><label class="labels"><b>About
-                                                            </b></label><input type="text" class="form-control"
-                                                        id="About" placeholder="Room Price" required></div>
+                                                <div class="col-lg-5"><label class="labels"><b>Room
+                                                            Price</b></label><input type="number" class="form-control"
+                                                        id="roomPrice" placeholder="Room Price" required></div>
                                             </div>
                                         </div>
                                     </div>
@@ -339,7 +339,7 @@
                                 const hotelData = doc.data();
                                 document.getElementById('hotelName').value = hotelData.hotelName || "Sample Hotel Name";
                                 document.getElementById('hotelAddress').value = hotelData.hotelAddress || "Sample Hotel Address";
-                                document.getElementById('About').value = hotelData.About || "Sample About Content";
+                                document.getElementById('roomPrice').value = hotelData.roomPrice || 100;
                                 document.getElementById('numRooms').value = hotelData.numRooms || 10;
 
                                 const imagePreviewContainer = document.getElementById('hotelImagesPreview');
@@ -387,7 +387,7 @@
                                 // Fill with default sample text if no hotel data exists
                                 document.getElementById('hotelName').value = "Sample Hotel Name";
                                 document.getElementById('hotelAddress').value = "Sample Hotel Address";
-                                document.getElementById('About').value = "Sample Admin Details";
+                                document.getElementById('roomPrice').value = 100;
                                 document.getElementById('numRooms').value = 10;
                             }
                         }).catch((error) => {
@@ -405,13 +405,13 @@
                                 const hotelName = document.getElementById('hotelName').value;
                                 const hotelAddress = document.getElementById('hotelAddress').value;
                                 const numRooms = document.getElementById('numRooms').value;
-                                const About = document.getElementById('About').value;
+                                const roomPrice = document.getElementById('roomPrice').value;
 
                                 db.collection('hotels').doc(user.uid).set({
                                     hotelName: hotelName,
                                     hotelAddress: hotelAddress,
                                     numRooms: numRooms,
-                                    About: About,
+                                    roomPrice: roomPrice,
                                     accommodationDetails: Array.from(selectedOptions)
                                 }, { merge: true }).then(() => {
                                     console.log("Hotel details saved successfully!");
