--- a/admin/hotels/room details test.html
+++ b/admin/hotels/room details test.html
@@ -341,6 +341,7 @@
             form.innerHTML = `
                 <div class="border p-4 shadow-sm rounded-3 my-4">
                 <div class="row">
+                    <h4>Room Type:</h4>
                     <div class="col-lg-4 col-md-12 d-none">
                         <div class="text-start mt-2">
                             <h4 style="color: #ff0000;"><b>Room Images:</b></h4>
@@ -350,16 +351,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-12">
+                    <div class="col-12">
                         <div class="row">
-                            <div class="col-lg-6 col-md-12">
-                                <div class="form-group">
-                                    <label for="totalRooms">totalRooms:</label>
-                                    <input type="text" class="form-control totalRooms" value="${roomData.totalRooms || ''}" required>
-                                </div>
-
-                            </div>
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-4 col-md-12">
                                 <div class="form-group">
                                     <label for="roomType">Room Type:</label>
                                     <input type="text" class="form-control roomType" value="${roomData.roomType || ''}" required>
@@ -369,7 +363,17 @@
                                     <input type="text" class="form-control roomNumber" value="${roomData.roomNumber || ''}" required>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-4 col-md-12">
+                                <div class="form-group">
+                                    <label for="roomType">Room Type:</label>
+                                    <input type="text" class="form-control roomType" value="${roomData.roomType || ''}" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="roomNumber">Room Number:</label>
+                                    <input type="text" class="form-control roomNumber" value="${roomData.roomNumber || ''}" required>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-12">
                                 <div class="form-group">
                                     <label for="roomPrice">Room Price:</label>
                                     <input type="number" class="form-control roomPrice" value="${roomData.roomPrice || ''}" required>
