room details page sum bugs are fixed and almost complete ui on room details page with all input fields

--- a/admin/Login/register.html
+++ b/admin/Login/register.html
@@ -37,7 +37,7 @@
                     <div class="field input-field ">
                         <select name="propertyType" id="propertyType" class="input col-12" required>
                             <option value="" disabled selected>Select Your property type</option>
-                            <option value="Apartment">Apartment</option>
+                            <!-- <option value="Apartment">Apartment</option> -->
                             <option value="Homestay">Homestay</option>
                             <option value="Hotel">Hotel</option>
                         </select>
