homestays admin profile homestays sidebar ankle tag location or change to correct into hotels into homestays

--- a/admin/Homestays/gustdetail.html
+++ b/admin/Homestays/gustdetail.html
@@ -49,9 +49,9 @@
                     <span>User Profile</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link " href="Hotels.html">
+                <a class="nav-link " href="homestays.html">
                     <i class=""><img src="../img/sidbar icons/food_bank.png" alt=""></i>
-                    <span>Hotels</span></a>
+                    <span>Homestays</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link " href="room.html">
