--- a/admin/Homestays/room.html
+++ b/admin/Homestays/room.html
@@ -116,7 +116,7 @@
                     <span>User Profile</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link "  href="Hotels.html">
+                <a class="nav-link "  href="homestays.html">
                     <i class=""><img src="../img/sidbar icons/food_bank.png" alt=""></i>
                     <span>Homestays</span></a>
             </li>
